Added toolbar, also client can actually fetch secrets now.